New election property "voter-privacy"
Add a new election property "voter-privacy" which disables public
display of the voter list and the dump. The default is off for the
following reasons:

The voter list is public by default because in elections with broad
qualifications, like Board elections, the biggest trust issue is the
prospect of sockpuppet accounts. Opening up the voter list helps to
assure the community that the voters are genuine users of the site.
However, this rationale may not be applicable if the qualifications are
more heavily restricted.

The dump is public by default to address voter concerns that their vote
may have been silently removed from the database. Voters are given a
receipt which they can verify against the public dump. Voters can
privately verify with keyholders that the encrypted record encodes
the expected value. And keyholders can verify that the dump they have
been given matches the one which is returned to the public for receipt
spot-checks. However, it provides information about the number of
voters, and creates a potential security issue if the key is
compromised, so it might not be appropriate in cases where the
keyholders and voters trust the integrity of the server.

Change-Id: I2b1495aa29fb0a186e27f3c75c402b9e5d2452ff

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -51,6 +51,7 @@
 	"securepoll-in-exclude-list": "Sorry, you are not authorized to vote in this election.",
 	"securepoll-custom-unqualified": "$1",
 	"securepoll-list-title": "List votes: $1",
+	"securepoll-list-private": "Sorry, viewing the list of voters for this election is restricted to election administrators.",
 	"securepoll-header-timestamp": "Time",
 	"securepoll-header-voter-name": "Name",
 	"securepoll-header-voter-domain": "Domain",
@@ -85,6 +86,7 @@
 	"securepoll-dump-no-crypt": "No encrypted election record is available for this election, because the election is not configured to use encryption.",
 	"securepoll-dump-not-finished": "Encrypted election records are only available after the finish date on $1 at $2",
 	"securepoll-dump-no-urandom": "Cannot open /dev/urandom. \nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
+	"securepoll-dump-private": "Sorry, viewing the encrypted record dump for this election is restricted to election administrators.",
 	"securepoll-urandom-not-supported": "This server does not support cryptographic random number generation.\nTo maintain voter privacy, encrypted election records are only publically available when they can be shuffled with a secure random number stream.",
 	"securepoll-translate-title": "Translate: $1",
 	"securepoll-translate-redirect": "Messages for this election must be configured on $1",
@@ -161,6 +163,7 @@
 	"securepoll-create-label-shuffle_options": "Shuffle options on the voting page.",
 	"securepoll-create-label-must_rank_all": "Require that all options be ranked.",
 	"securepoll-create-label-must_answer_all": "Require that all options be answered.",
+	"securepoll-create-label-voter_privacy": "Disable transparency features (e.g. voter list) to protect voter privacy",
 	"securepoll-create-label-gpg_encrypt_key": "GPG encryption key",
 	"securepoll-create-label-gpg_sign_key": "GPG signing key",
 	"securepoll-create-label-questions": "== Questions ==",
