--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -52,6 +52,7 @@
 	"securepoll-in-exclude-list": "Used as error message.",
 	"securepoll-custom-unqualified": "{{notranslate}}\nUsed as fatal error message. Parameters:\n* $1 - error message",
 	"securepoll-list-title": "Used as page title and as page subtitle. Parameters:\n* $1 - title of the election, or the string \"[title]\"",
+	"securepoll-list-private": "Used as an error message.",
 	"securepoll-header-timestamp": "{{Identical|Time}}",
 	"securepoll-header-voter-name": "{{Identical|Name}}",
 	"securepoll-header-voter-domain": "{{Identical|Domain}}",
@@ -81,6 +82,7 @@
 	"securepoll-dump-title": "Used as page title. Parameters:\n* $1 - title of the election, or the string \"[title]\"\n{{Identical|Dump}}",
 	"securepoll-dump-not-finished": "Used if the election is not finished. Parameters:\n* $1 - the date\n* $2 - the time",
 	"securepoll-dump-no-urandom": "Do not translate \"/dev/urandom\".\n\nServers running Microsoft Windows will present [[MediaWiki:Securepoll-urandom-not-supported/en|Securepoll-urandom-not-supported]] instead.",
+	"securepoll-dump-private": "Used as an error message.",
 	"securepoll-urandom-not-supported": "As to the meaning of ''cryptographic random number'', see [[:wikipedia:Cryptographically secure pseudorandom number generator]] for reference.\n\nThe /dev/urandom cryptographic random number generation device is not supported on servers running Microsoft Windows. On other platforms the [[MediaWiki:Securepoll-dump-no-urandom/en|Securepoll-dump-no-urandom]] message is generated if opening of the /dev/urandom device fails.",
 	"securepoll-translate-title": "Used as page title. Parameters:\n* $1 - title of election\n{{Identical|Translate}}",
 	"securepoll-translate-redirect": "Text displayed when trying to edit messages for a multi-wiki poll on the wrong wiki.\n\nParameters:\n* $1 - HTML of a link to the correct wiki. Displayed text is either the wiki name or {{msg-mw|securepoll-translate-redirect-otherwiki}}",
@@ -142,6 +144,7 @@
 	"securepoll-create-label-shuffle_options": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-must_rank_all": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-must_answer_all": "Label for form field on Special:SecurePoll/create.",
+	"securepoll-create-label-voter_privacy": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-gpg_encrypt_key": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-gpg_sign_key": "Label for form field on Special:SecurePoll/create.",
 	"securepoll-create-label-questions": "Label for \"Questions\" section on Special:SecurePoll/create.\n{{Identical|Question}}",
