i18n: Changing 'CSRF' to 'Failed' to clarify why it's marked
Bug: T294063
Change-Id: I85fac9cdf3a651ca694fc622c5bfbcc8ac58dcb1

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -67,7 +67,7 @@
 	"securepoll-header-strike": "Strike",
 	"securepoll-header-details": "Details",
 	"securepoll-vote-duplicate": "Duplicate",
-	"securepoll-vote-csrf": "CSRF",
+	"securepoll-vote-csrf": "Failed",
 	"securepoll-strike-button": "Strike",
 	"securepoll-unstrike-button": "Unstrike",
 	"securepoll-strike-reason": "Reason:",
