SECURITY: Require an edit token to archive/unarchive elections
Why:
Without a token, an account with election rights is a vector for a
CSRF attack.

What:
- Add a csrf token to the un/archive links
- Check for this token when visiting un/archive pages

Bug: T392341
Change-Id: I5c3a2cf0b7bba9c53dee6ed67f046f3c2791c1ca
(cherry picked from commit 982e5cad3eb56fb3c88f5fb2c3b88f05975c3655)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -134,12 +134,14 @@
 	"securepoll-archive-not-finished": "Sorry, you can only archive finished elections.",
 	"securepoll-archive-in-progress": "Election is currently being archived.",
 	"securepoll-archive-error": "Failed to archive election. Please try again.",
+	"securepoll-archive-token-error": "There was a problem with your session and the election was not archived. Please try again.",
 	"securepoll-already-archived-error": "This election is already archived.",
 	"securepoll-entry-archived": "View archived elections",
 	"securepoll-archived-title": "Archived elections",
 	"securepoll-subpage-unarchive": "Unarchive",
 	"securepoll-unarchive-title": "Unarchive $1",
 	"securepoll-unarchive-in-progress": "Election is currently being unarchived.",
+	"securepoll-unarchive-token-error": "There was a problem with your session and the election was not unarchived. Please try again.",
 	"securepoll-already-unarchived-error": "This election is not archived.",
 	"securepoll-tally-title": "Tally: $1",
 	"securepoll-tally-not-finished": "Sorry, you cannot tally the election until after voting is complete.",
