SECURITY: Require an edit token to clear voter eligibility lists
Why:
Without a token, an account with election rights is a vector for a
CSRF attack.

What:
- Add a csrf token to the voter elegibility list clear URL
- Check for this token when attempting to clear a list

Bug: T392341
Change-Id: I7a771f81cc72bd5c6242767cf3f5e19fa140accc

--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -308,6 +308,7 @@
 	"securepoll-votereligibility-cleared": "Title for clear confirmation page for [[Special:SecurePoll/votereligibility]].\n\nRefers to {{msg-mw|Securepoll}}.",
 	"securepoll-votereligibility-cleared-text": "Text for clear confirmation page for Special:SecurePoll/votereligibility. $1 is a list name.",
 	"securepoll-votereligibility-cleared-comment": "Text used as the edit summary when clearing a list on Special:SecurePoll/votereligibility. $1 is a list name.",
+	"securepoll-votereligibility-token-mismatch": "Used as an error.",
 	"right-securepoll-create-poll": "{{doc-right|securepoll-create-poll}}",
 	"action-securepoll-create-poll": "{{Doc-action|securepoll-create-poll}}",
 	"right-securepoll-view-voter-pii": "{{doc-right|securepoll-view-voter-pii}}",
