SECURITY: Require an edit token to clear voter eligibility lists
Why:
Without a token, an account with election rights is a vector for a
CSRF attack.

What:
- Add a csrf token to the voter elegibility list clear URL
- Check for this token when attempting to clear a list

Bug: T392341
Change-Id: I7a771f81cc72bd5c6242767cf3f5e19fa140accc
(cherry picked from commit 2579cda31257af1e9ce0aa01c35f7f805f7d22de)

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -284,6 +284,7 @@
 	"securepoll-votereligibility-cleared": "{{int:securepoll}}: Cleared",
 	"securepoll-votereligibility-cleared-text": "The $1 has been cleared and will not be used by the poll.",
 	"securepoll-votereligibility-cleared-comment": "$1 cleared.",
+	"securepoll-votereligibility-token-mismatch": "There was a problem with your session and the voter eligibility list was not cleared. Please try again.",
 	"right-securepoll-create-poll": "Create polls",
 	"action-securepoll-create-poll": "create polls and view logs",
 	"right-securepoll-view-voter-pii": "Access personally-identifying information about voters",
